Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15079

(lu_object.h:1274:lu_env_info()) ASSERTION( info ) failed:

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      (lu_object.h:1274:lu_env_info()) ASSERTION( info ) failed:
      (lu_object.h:1274:lu_env_info()) LBUG
      Pid: 146951, comm: ll_mgs_0003 3.10.0-957.1.3957.1.3.x4.3.25.x86_64 #1 SMP
      Call Trace:
       libcfs_call_trace+0x8e/0xf0 [libcfs]
       lbug_with_loc+0x4c/0xa0 [libcfs]
       qsd_refresh_usage+0x25e/0x2f0 [lquota]
       qsd_op_adjust+0x2f1/0x730 [lquota]
       osd_object_delete+0x2b2/0x360 [osd_ldiskfs]
       lu_object_free.isra.32+0x68/0x170 [obdclass]
       lu_site_purge_objects+0x2fe/0x530 [obdclass]
       lu_object_find_at+0x371/0xa60 [obdclass]
       dt_locate_at+0x1d/0xb0 [obdclass]
       llog_osd_open+0x50e/0xf30 [obdclass]
       llog_open+0x15a/0x3e0 [obdclass]
       llog_origin_handle_open+0x334/0x720 [ptlrpc]
       tgt_llog_open+0x33/0xe0 [ptlrpc]
       mgs_llog_open+0x46/0x460 [mgs]
       tgt_request_handle+0x96a/0x1680 [ptlrpc]
      

      It seems msg service context needs qsd_thread_info.

            vsaveliev Vladimir Saveliev
            vsaveliev Vladimir Saveliev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: